--- a/index.css
+++ b/index.css
@@ -78,4 +78,45 @@ nav button{
    text-decoration: none;
     color: #FFFFFF;
     font-size: 16px;
-} */
+} 
+
+.action{
+    display: flex;
+    justify-content: space-between;
+    gap: auto;
+    margin: 116px 141px;
+    width: 1140px;
+    height: 328px;
+}
+.action-para h1{
+    font-weight: bold;
+    font-size: 42px;
+    color: #252432;
+}
+.action-para p{
+    color: #252432;
+    padding-top: 23px;
+    padding-bottom: 23px;
+}
+.action-para{
+    height: 203px;
+    width: 517px;
+}
+.action-para button{
+    height: 48px;
+    width: 229px;
+    background-color: #4E47FF;
+    border-radius: 10px;
+    border: none;
+}
+.action-para button a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+.wc-img{
+    height: 328px;
+    width: 403px;
+    border-radius: 48px;
+}
