--- a/index.css
+++ b/index.css
@@ -120,3 +120,40 @@ nav button{
     width: 403px;
     border-radius: 48px;
 }
+
+.joined{
+    background-color:rgb(186, 186, 231);
+    height: 306px;
+    width: 1140px;
+    border-radius: 24px;
+    margin: 0 auto;
+    padding: 50px 80px;
+    margin-top: 116px;
+    margin-bottom: 116px;
+    margin-right: 141px;
+    margin-left: 141px;
+    
+}
+.joined h1{
+    text-align: center;
+    columns: #c7c4f3;
+    font-size: 38px;
+    font-weight: bold;
+}
+
+.flexx{
+    display: flex;
+    justify-content: space-around;
+    height: 121px;
+    width: 856px;
+}
+.items-heading{
+    font-size: 80px;
+    font-weight: bold;
+    color: #4E47FF;
+}
+.items-para{
+    font-size: 20px;
+    font-weight: 100;
+    height: 24px;
+}
