--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@ nav button{
 }
 
 .joined{
-    background-color:rgb(186, 186, 231);
+    background-color:rgb(185, 185, 232);
     height: 306px;
     width: 1140px;
     border-radius: 24px;
@@ -156,4 +156,50 @@ nav button{
     font-size: 20px;
     font-weight: 100;
     height: 24px;
+}
+
+.user-say{
+    height: 342px;
+    width: 1140px;
+    margin: 0 auto;
+}
+.user-say h1{
+    height: 49px;
+    width: 1140px;
+    text-align: center;
+    color: #000000;
+    font-size: 42px;
+    font-weight: bold;
+}
+.flx{
+    padding-top: 50px;
+    display: flex;
+    height: 243px;
+    width: 1140px;
+    /* gap 20px; */
+    
+}
+.user-div{
+    border-radius: 24px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    height: 243px;
+    width: 366.67px;
+    padding: 24px;
+}
+.user-div h2{
+    padding-top: 24PX;
+}
+.user-div P{
+    padding-bottom: 24PX;
+    height: 44px;
+    width: 318px;
+}
+.img-div{
+    display: flex;
+    width: 40px;
+    height: 40px;
+}
+
+.date r{
+    color: #757575;
 }
