--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/* start1 */
 .background {
   background-image: url('Assets/Hero-bg.png'); 
   background-size: cover;
@@ -79,7 +79,9 @@ nav button{
     color: #FFFFFF;
     font-size: 16px;
 } 
+/* end1 */
 
+/* start2 */
 .action{
     display: flex;
     justify-content: space-between;
@@ -94,7 +96,7 @@ nav button{
     color: #252432;
 }
 .action-para p{
-    color: #252432;
+    color: #8987A1;
     padding-top: 23px;
     padding-bottom: 23px;
 }
@@ -116,11 +118,20 @@ nav button{
     color: #FFFFFF;
 }
 .wc-img{
+    display: flex;
+    justify-content: center;
     height: 328px;
     width: 403px;
     border-radius: 48px;
 }
+.round-image1{
+    height: 364.77px;
+    width: 840px;
+    border-radius: 48px;
+}
+/* end2 */
 
+/* start3 */
 .joined{
     background-color:rgb(185, 185, 232);
     height: 306px;
@@ -146,7 +157,11 @@ nav button{
     justify-content: space-around;
     height: 121px;
     width: 856px;
+    margin-left:20px ;
+    padding-left: 40px;
+    padding-bottom: 40px;
 }
+
 .items-heading{
     font-size: 80px;
     font-weight: bold;
@@ -157,7 +172,9 @@ nav button{
     font-weight: 100;
     height: 24px;
 }
+/* end 3 */
 
+/* start 4*/
 .user-say{
     height: 342px;
     width: 1140px;
@@ -202,4 +219,150 @@ nav button{
 
 .date r{
     color: #757575;
+}
+.ready{
+    width: 1140px;
+    height: 696.77px;
+    background-color: #f5f5f5;
+    margin: 0  auto;
+    border-radius: 14px;
+    margin-top: 100px;
+    text-align: center;
+    /* margin-left: 141px;
+    margin-right: 141px; */
+}
+.hd{
+    font-size: 42px;
+    font-weight: bold;
+    height: 49px;
+    width: 1140px;
+    text-align: center;
+    color: #252432;
+    padding-top: 71px;
+    margin-bottom: 20px;
+}
+.sub{
+    color: #757575;
+}
+
+ .btn{
+    padding: 12px 36px;
+    height: 48px;
+    width: 195px;
+    background-color: #4E47FF;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 20px;
+    margin-top: 20px;
+ }
+ .btn a{
+    text-decoration: none;
+    color: linen;
+ }
+ .ready-img{
+    display: flex;
+    justify-content: center;
+    
+ }
+ .round{
+height: 364.77px;
+    width: 840px;
+    border-radius: 48px;
+ }
+/* end 4*/
+
+/* start 5 */
+ .get{
+    height: 632px;
+    width: 1140px;
+    display: flex;
+    margin: 0 auto;
+    gap: 200px;
+    margin-top: 100px;
+    margin-left: 150px;
+    margin-right: 150px;
+    padding-bottom: 71px;
+    padding-top:71px ;
+     justify-content: space-around;
+ }
+ .touch{
+    display: flex;
+    justify-content: space-between;
+    height: 232px;
+    width: 528px;
+    font-size: 60px;
+    font-weight: bold;
+    color: #000000;
+ }
+  .input{
+    display: block;
+    height: 490px;
+    width: 497px;
+    font: 18px;
+    background-color: #FFFFFF;
+ }
+ /* .email{
+    height: 102px;
+    width: 497px;
+ }
+ .name{
+    height: 102px;
+    width: 497px;
+ }
+ .massage{
+    height: 167px;
+    width: 497px;
+ }  */
+    form{
+    height: 70;
+     width: 497;
+      margin-bottom: 19px;
+      padding: 20px
+
+   }
+ .buton button a{
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: bold;
+ }
+ 
+ .buton button{
+background-color: #4E47FF;
+border: none;
+ }
+ footer{
+    margin-top: 0;
+    /* height:428px ;
+    width: 1440px; */
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+ } 
+ footer h1{
+    font-size: 100px;
+    font-weight: bold;
+    color: #4E47FF;
+
+ }
+ footer section{
+    height:221px ;
+    width:531px ;
+ }
+ nav ul li a{
+    text-decoration: none;
+    color: #8987A1;
+ }
+nav ul li{
+    list-style: none;
+}
+nav ul{
+    padding: 20px;
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+}
+.p{
+    color: #8987A1;
 }
