--- a/index.css
+++ b/index.css
@@ -276,17 +276,23 @@ height: 364.77px;
 
 /* start 6 */
  .get{
-    height: 632px;
+    height: 400px;
     width: 1140px;
     display: flex;
     margin: 0 auto;
     gap: 200px;
-    margin-top: 100px;
-    margin-left: 150px;
-    margin-right: 150px;
-    padding-bottom: 71px;
+    background-color: #FFFFFF; 
     padding-top:71px ;
-     justify-content: space-around;
+     justify-content: space-between;
+ }
+ .input{
+    display: block;
+    height: 300px;
+    width: 497px;
+    font: 18px;
+    background-color: #FFFFFF;
+    margin-left: auto;
+    /* justify-items: left; */
  }
  .touch{
     display: flex;
@@ -297,30 +303,25 @@ height: 364.77px;
     font-weight: bold;
     color: #000000;
  }
-  .input{
-    display: block;
-    height: 490px;
-    width: 497px;
-    font: 18px;
-    background-color: #FFFFFF;
- }
- /* .email{
-    height: 102px;
+  
+  .email{
+    height: 70px;
     width: 497px;
  }
  .name{
-    height: 102px;
+    height: 70px;
     width: 497px;
  }
  .massage{
-    height: 167px;
+    height: 80px;
     width: 497px;
- }  */
+ }  
     form{
     height: 70;
      width: 497;
       margin-bottom: 19px;
       padding: 20px
+    jus
 
    }
  .buton button a{
@@ -336,10 +337,12 @@ border: none;
  }
 /* end 6 */
 
+/* start 7 */
  footer{
-    margin-top: 0;
-    /* height:428px ;
-    width: 1440px; */
+    margin-top: 110;
+    padding-top: 100px;
+    height:428px ;
+    width: 1440px;
     text-align: center;
     justify-content: center;
     justify-items: center;
@@ -371,3 +374,7 @@ nav ul{
 .p{
     color: #8987A1;
 }
+nav ul li a:hover{
+    background-color:aqua;
+}
+/* end 7 */
