--- a/index.css
+++ b/index.css
@@ -42,6 +42,9 @@ nav button{
     width: 132 px; 
     border: none;  
 }
+nav button:hover{
+    background-color: aqua;
+}
 .head{
     display: flex;
   flex-direction: column;
@@ -73,6 +76,9 @@ nav button{
     padding: 12px 30px;
     align-items: center;
     justify-items: center;
+}
+.head button:hover{
+    background-color: aqua;
 }
 .head button a{
    text-decoration: none;
@@ -110,6 +116,9 @@ nav button{
     background-color: #4E47FF;
     border-radius: 10px;
     border: none;
+}
+.action-para button:hover{
+    background-color: aqua;
 }
 .action-para button a{
     text-decoration: none;
@@ -258,6 +267,9 @@ nav button{
     margin-bottom: 20px;
     margin-top: 20px;
  }
+ .btn:hover{
+    background-color: aqua;
+ }
  .btn a{
     text-decoration: none;
     color: linen;
@@ -329,6 +341,9 @@ height: 364.77px;
     color: #FFFFFF;
     font-size: 16px;
     font-weight: bold;
+ }
+ .buton button:hover{
+    background-color: aqua;
  }
  
  .buton button{
