--- a/index.css
+++ b/index.css
@@ -1,7 +1,13 @@
+.inter-normal {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
 }
 /* start1 */
 .background {
@@ -304,14 +310,14 @@ height: 364.77px;
     font: 18px;
     background-color: #FFFFFF;
     margin-left: auto;
-    /* justify-items: left; */
+    justify-items: left;
  }
  .touch{
     display: flex;
     justify-content: space-between;
     height: 232px;
     width: 528px;
-    font-size: 60px;
+    font-size: 70px;
     font-weight: bold;
     color: #000000;
  }
